--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ perl6:
   - '2020.05.1'
 install:
   - rakudobrew build zef
-  - zef --depsonly install .
   - wget -q https://github.com/harfbuzz/harfbuzz/archive/2.7.4.tar.gz
   - (tar xzf 2.7.4.tar.gz && cd harfbuzz-2.7.4 && ./autogen.sh && make)
+  - export LD_LIBRARY_PATH=`pwd`/harfbuzz-2.7.4/src/.libs
+  - zef --depsonly install .
 script:
   - export LD_LIBRARY_PATH=`pwd`/harfbuzz-2.7.4/src/.libs
   - prove -ve "raku -I."
