--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,14 +25,16 @@ jobs:
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
-      - name: Linux specific setup
-        if: contains(matrix.os, 'ubuntu')
-        run: |
-          sudo apt-get install -y libharfbuzz-dev
-      - name: macOS specific setup
-        if: contains(matrix.os, 'macOS')
+      - name Install Libraries (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run:
+          apt-get install -y libfreetype6-dev
+          apt-get install -y libharfbuzz-dev
+      - name Install Libraries (MacOS)
+        if: matrix.os == 'macOS-latest'
         run: |
           brew update
+          brew install freetype
           brew install harfbuzz
       - name: Install Dependencies
         run: |
