--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,12 +25,12 @@ jobs:
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
-      - name Install Libraries (Ubuntu)
+      - name: Install Libraries (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: |
           apt-get install -y libfreetype6-dev
           apt-get install -y libharfbuzz-dev
-      - name Install Libraries (MacOS)
+      - name: Install Libraries (MacOS)
         if: matrix.os == 'macOS-latest'
         run: |
           brew update
