--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Install Libraries (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: |
-          apt-get install -y libfreetype6-dev
-          apt-get install -y libharfbuzz-dev
+          sudo apt-get install -y libfreetype6-dev
+          sudo apt-get install -y libharfbuzz-dev
       - name: Install Libraries (MacOS)
         if: matrix.os == 'macOS-latest'
         run: |
