--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           sudo apt-get install -y libfreetype6-dev
           sudo apt-get install -y libharfbuzz-dev
+          sudo apt-get install -y libfontconfig-dev
       - name: Install Libraries (MacOS)
         if: matrix.os == 'macOS-latest'
         run: |
@@ -37,6 +38,7 @@ jobs:
           brew install freetype
           brew install harfbuzz
           brew install openssl
+          brew install fontconfig
       - name: Install Dependencies
         run: |
           zef install --/test App::Prove6
